TWI-12 Get profile
